--- a/.github/workflows/database-deploy.yml
+++ b/.github/workflows/database-deploy.yml
@@ -1,65 +1,51 @@
-name: Database Deployment
+name: CI/CD Pipeline for Database Deployment
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:  # Allows manual trigger from GitHub
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set Up Python
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.9'
 
-      - name: Install MySQL Connector
-        run: pip install mysql-connector-python
-
-      - name: Execute SQL Script
-        env:
-          MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+      - name: Install dependencies
         run: |
-          echo "🔗 Connecting to MySQL Database at $MYSQL_HOST..."
-          
+          python -m pip install --upgrade pip
+          pip install mysql-connector-python
+
+      - name: Execute SQL script
+        env:
+          DB_HOST: priyacompanydb.mysql.database.azure.com
+          DB_USER: priya
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: priyacompanydb
+        run: |
           python - <<EOF
           import mysql.connector
           import os
 
           try:
-              # Fetch environment variables
-              MYSQL_HOST = os.getenv("MYSQL_HOST")
-              MYSQL_USER = os.getenv("MYSQL_USER")
-              MYSQL_PASSWORD = os.getenv("MYSQL_PASSWORD")
-              MYSQL_DATABASE = os.getenv("MYSQL_DATABASE")
+              connection = mysql.connector.connect(
+                  host=os.getenv("DB_HOST"),
+                  user=os.getenv("DB_USER"),
+                  password=os.getenv("DB_PASSWORD"),
+                  database=os.getenv("DB_NAME"),
+                  port=3306
+              )
 
-              print(f"🔗 Connecting to MySQL Database at {MYSQL_HOST}...")
-              
-              # Database connection configuration
-              DB_CONFIG = {
-                  "host": MYSQL_HOST,
-                  "user": MYSQL_USER,
-                  "password": MYSQL_PASSWORD,
-                  "database": MYSQL_DATABASE,
-                  "port": 3306
-              }
-
-              connection = mysql.connector.connect(**DB_CONFIG)
               cursor = connection.cursor()
-
-              # Execute SQL script
-              sql_file = "schema_changes.sql"
-              print(f"🚀 Executing {sql_file}...")
-              with open(sql_file, "r") as file:
+              with open("schema_changes.sql", "r") as file:
                   sql_commands = file.read().split(";")
 
               for command in sql_commands:
