--- a/.github/workflows/database-deploy.yml
+++ b/.github/workflows/database-deploy.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Debug Environment Variables
         run: |
           echo "🔎 Debugging Environment Variables..."
-          echo "MYSQL_HOST: '$MYSQL_HOST'"
-          echo "MYSQL_USER: '$MYSQL_USER'"
-          echo "MYSQL_DATABASE: '$MYSQL_DATABASE'"
+          echo "MYSQL_HOST: '${{ secrets.MYSQL_HOST }}'"
+          echo "MYSQL_USER: '${{ secrets.MYSQL_USER }}'"
+          echo "MYSQL_DATABASE: '${{ secrets.MYSQL_DATABASE }}'"
           echo "MYSQL_PASSWORD: [HIDDEN]"  # Hide password for security
         env:
           MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
@@ -31,15 +31,6 @@ jobs:
           MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
 
       - name: Execute SQL script
-        env:
-          MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
         run: |
-          if [ -z "$MYSQL_HOST" ]; then
-            echo "❌ MYSQL_HOST is empty! Check GitHub Secrets."
-            exit 1
-          fi
-          echo "🔗 Connecting to MySQL Database at $MYSQL_HOST..."
-          mysql -h "$MYSQL_HOST" -P 3306 -u "$MYSQL_USER" -p"$MYSQL_PASSWORD" "$MYSQL_DATABASE" < schema_changes.sql
+          echo "🔗 Connecting to MySQL Database at '${{ secrets.MYSQL_HOST }}'..."
+          mysql -h "${{ secrets.MYSQL_HOST }}" -P 3306 -u "${{ secrets.MYSQL_USER }}" -p"${{ secrets.MYSQL_PASSWORD }}" "${{ secrets.MYSQL_DATABASE }}" < schema_changes.sql
