--- a/.github/workflows/database-deploy.yml
+++ b/.github/workflows/database-deploy.yml
@@ -1,36 +1,37 @@
 name: CI/CD Pipeline for Database Deployment
-
+ 
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
-
+      - main  # This will trigger the workflow when changes are pushed to the main branch
+ 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest  # Set the environment to run the workflow
+ 
     steps:
+      # Checkout the repository code
       - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install MySQL Client
-        run: sudo apt-get install -y mysql-client
-
-      - name: Debug Environment Variables
+        uses: actions/checkout@v2
+ 
+      # Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+ 
+      # Install dependencies (mysql-connector-python and other required packages)
+      - name: Install dependencies
         run: |
-          echo "🔎 Debugging Environment Variables..."
-          echo "MYSQL_HOST: '${{ secrets.MYSQL_HOST }}'"
-          echo "MYSQL_USER: '${{ secrets.MYSQL_USER }}'"
-          echo "MYSQL_DATABASE: '${{ secrets.MYSQL_DATABASE }}'"
-          echo "MYSQL_PASSWORD: [HIDDEN]"  # Hide password for security
-        env:
-          MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-
+          python -m pip install --upgrade pip
+          pip install mysql-connector-python
+ 
+      # Run the Python script to execute the SQL script
       - name: Execute SQL script
         run: |
-          echo "🔗 Connecting to MySQL Database at '${{ secrets.MYSQL_HOST }}'..."
-          mysql -h "${{ secrets.MYSQL_HOST }}" -P 3306 -u "${{ secrets.MYSQL_USER }}" -p"${{ secrets.MYSQL_PASSWORD }}" "${{ secrets.MYSQL_DATABASE }}" < schema_changes.sql
+          python execute_sql.py  # This will execute your script to apply changes to the database
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: priyacompanydb
